[package]
name = "tacd"
version = "0.2.0"
authors = ["Jan Luebbe <jlu@pengutronix.de>", "Leonard Göhrs <lgo@pengutronix.de>"]
edition = "2018"
repository = "https://github.com/linux-automation/tacd.git"
license = "GPL-2.0-only"

[build-dependencies]
chrono = "0.4"
serde_json = "1.0"
serde_yaml = "0.9"

[dependencies]
anyhow = "1.0"
async-sse = "5.1"
async-std = { version = "1.13", features = ["attributes"] }
async-trait = "0.1"
async-tungstenite = "0.28"
base64 = "0.22"
chrono = "0.4"
embedded-graphics = "0.8"
env_logger = "0.11"
evdev = "0.12"
framebuffer = "0.3"
futures = "0.3"
futures-lite = "2.5"
futures-util = "0.3"
gpio-cdev = "0.6"
html-escape = "0.2"
industrial-io = { version = "0.5", default-features = false }
log = { version = "0.4", features = ["release_max_level_warn"]}
mqtt-protocol = "0.12"
nix = { version = "0.29", features = ["mount"] }
numtoa = "0.2"
png = "0.17"
rand = { version = "0.8", optional = true}
serde_json = "1.0"
serde_yaml = "0.9"
serde = { version = "1.0", features = ["derive"] }
sha-1 = "0.10"
surf = { version = "2.3", default-features = false, features = ["h1-client-no-tls"] }
sysfs-class = "0.1"
systemd = { version = "0.10", optional = true}
thread-priority = "1.2"
tide = "0.16"
unique-token = "0.2"
zbus = "4.2"
zvariant_derive = "4.2"
zvariant = { version = "4.2", default-features = false, features = ["enumflags2"] }

[features]
default = ["systemd"]
demo_mode = ["rand"]

[profile.release]
lto = true
overflow-checks = true
opt-level = "z"
codegen-units = 1

[lints.clippy]
# This is necessary because the `.is_multiple_of()` function that this lint
# suggests is not yet stabilized in the rust version used in Yocto walnascar
# (1.84.1).
# TODO: remove this when updating to a newer yocto release.
manual_is_multiple_of = "allow"
